--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "back",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "practica_final_ingeweb",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "mysql": "^2.18.1"
+    "@prisma/client": "^5.15.0",
+    "dotenv": "^16.4.5",
+    "next": "14.2.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6.28.1",
+    "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.1"
   }
 }
